samples/_failures_safe/1761164139_635e0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cfa4129.c: In function ‘main’:
./samples/SAFE/__tmp_6cfa4129.c:158:9: error: expected declaration or statement at end of input
  158 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_6cfa4129.c:158:9: error: expected declaration or statement at end of input
